test(cli): always-on layout-fixture freshness gate
Extracts LayoutFixtureRegenerator's mapping table and per-mapping
pipeline into reusable package-private members (FixtureMapping,
mappings(), regeneratedJson()) so the opt-in regenerator and a new
LayoutFixtureFreshnessTest parameterized gate share one code path.
The opt-in write path is unchanged: it now calls
Files.writeString(target, regeneratedJson(mapping), ...), byte-identical
to before.

Investigation note: an isolated `-Dtest=LayoutFixture*` run shows
uml-sequence-self-message.json diverging (self-message y-coordinates
shift by 12); this is NOT a stale fixture. Bisection across ~25 commits,
targeted file reverts, and repeated clean (`mvn clean`) rebuilds show the
SAME current-HEAD code deterministically returns the checked-in value
under the repo's real verification lanes (`-pl core,cli -am test`,
`./mvnw test` -- both green across 5 repeated runs) but a different value
when this one test class is run in isolation via a narrow -Dtest= filter
(red across 3 repeated runs). This points to a pre-existing JIT/execution-
context-sensitive tie-break in ELK's self-loop routing for this one
symmetric case, not a code regression -- no fixture was regenerated since
the checked-in bytes are confirmed fresh under standard verification.
Flagged for follow-up; see task-10-report.md for the full trail.